--- a/docroot/themes/custom/site/src/scss/custom/entities/paragraph/field/_description.scss
+++ b/docroot/themes/custom/site/src/scss/custom/entities/paragraph/field/_description.scss
@@ -16,9 +16,13 @@
 
 // Description
 .field--name-field-description {
-  @extend h1;
-  text-transform: uppercase;
-  font-weight: $headings-font-weight-bold;
+
+  &,
+  p {
+    @extend h1;
+    text-transform: uppercase;
+    font-weight: $headings-font-weight-bold;
+  }
 }
 
 // --------------------------------------------------
