--- a/docroot/themes/custom/site/src/scss/custom/entities/paragraph/field/_loader.scss
+++ b/docroot/themes/custom/site/src/scss/custom/entities/paragraph/field/_loader.scss
@@ -1,5 +1,5 @@
 @import 'heading';
 @import 'link';
-@import 'background-color';
-@import 'background-image';
+@import 'angled-background';
 @import 'description';
+@import 'highlighted';
