--- a/docroot/themes/custom/site/src/scss/custom/entities/paragraph/field/_highlighted.scss
+++ b/docroot/themes/custom/site/src/scss/custom/entities/paragraph/field/_highlighted.scss
@@ -1,9 +1,9 @@
 // |--------------------------------------------------------------------------
-// | Link
+// | Highlighted
 // |--------------------------------------------------------------------------
 // |
 // | This file contains styles for the following:
-// | - .field--name-field-link
+// | - .field--name-field-highlighted
 // |
 
 // --------------------------------------------------
@@ -14,12 +14,11 @@
 // Styling
 // --------------------------------------------------
 
-// Link
-.field--name-field-link {
-
-  a {
-    @extend .btn;
-  }
+// Highlighted
+.field--name-field-highlighted {
+  @extend h5;
+  text-transform: uppercase;
+  font-weight: $headings-font-weight-bold;
 }
 
 // --------------------------------------------------
@@ -29,60 +28,45 @@
 // Background image
 .angled-background-image {
 
-  // Link
-  .field--name-field-link {
-
-    a {
-      @extend .btn-primary;
-    }
+  // Highlighted
+  .field--name-field-highlighted {
+    color: #fff;
   }
 }
 
 // White
 .angled-background-color-white {
 
-  // Link
-  .field--name-field-link {
-
-    a {
-      @extend .btn-primary;
-    }
+  // Highlighted
+  .field--name-field-highlighted {
+    color: $brand-secondary;
   }
 }
 
 // Gray
 .angled-background-color-gray {
 
-  // Link
-  .field--name-field-link {
-
-    a {
-      @extend .btn-primary;
-    }
+  // Highlighted
+  .field--name-field-highlighted {
+    color: $brand-secondary;
   }
 }
 
 // Primary
 .angled-background-color-primary {
 
-  // Link
-  .field--name-field-link {
-
-    a {
-      @extend .btn-default;
-    }
+  // Highlighted
+  .field--name-field-highlighted {
+    color: $brand-secondary;
   }
 }
 
 // Secondary
 .angled-background-color-secondary {
 
-  // Link
-  .field--name-field-link {
-
-    a {
-      @extend .btn-primary;
-    }
+  // Highlighted
+  .field--name-field-highlighted {
+    color: $text-color;
   }
 }
 
@@ -93,76 +77,76 @@
 // Mobile - and up
 @include media-breakpoint-up(xs) {
 
-  // Link
-  .field--name-field-link {}
+  // Highlighted
+  .field--name-field-highlighted {}
 }
 
 // Mobile - only
 @include media-breakpoint-only(xs) {
 
-  // Link
-  .field--name-field-link {}
+  // Highlighted
+  .field--name-field-highlighted {}
 }
 
 // Tablet - and up
 @include media-breakpoint-up(sm) {
 
-  // Link
-  .field--name-field-link {}
+  // Highlighted
+  .field--name-field-highlighted {}
 }
 
 // Tablet - only
 @include media-breakpoint-only(sm) {
 
-  // Link
-  .field--name-field-link {}
+  // Highlighted
+  .field--name-field-highlighted {}
 }
 
 // Desktop - and up
 @include media-breakpoint-up(md) {
 
-  // Link
-  .field--name-field-link {}
+  // Highlighted
+  .field--name-field-highlighted {}
 }
 
 // Desktop - only
 @include media-breakpoint-only(md) {
 
-  // Link
-  .field--name-field-link {}
+  // Highlighted
+  .field--name-field-highlighted {}
 }
 
 // Large desktop - and up
 @include media-breakpoint-up(lg) {
 
-  // Link
-  .field--name-field-link {}
+  // Highlighted
+  .field--name-field-highlighted {}
 }
 
 // Print
 @media print {
 
-  // Link
-  .field--name-field-link {}
+  // Highlighted
+  .field--name-field-highlighted {}
 }
 
 // Touch
 .touchevents {
 
-  // Link
-  .field--name-field-link {}
+  // Highlighted
+  .field--name-field-highlighted {}
 }
 
 // No touch
 .no-touchevents {
 
-  // Link
-  .field--name-field-link {}
+  // Highlighted
+  .field--name-field-highlighted {}
 }
 
 // --------------------------------------------------
 // Mixins
 // --------------------------------------------------
 
-// Link mixin
-@mixin field--name-mixin-field-link() {}
+// Highlighted mixin
+@mixin field--name-mixin-field-highlighted() {}
