--- a/docroot/themes/custom/site/src/scss/mixins/_angled-background.scss
+++ b/docroot/themes/custom/site/src/scss/mixins/_angled-background.scss
@@ -1,46 +1,13 @@
-// mixin
-@mixin angled_background($background-color: #fff, $flip: false, $angle: 5deg) {
-  position: relative;
-  z-index: 1;
-  background-color: transparent !important;
-
-  &:before {
-    display: block;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin-top: -$paragraph-inner-sizing-top;
-    margin-bottom: -$paragraph-inner-sizing-bottom;
-    min-height: 100%;
-    background-color: $background-color;
-    content: '';
-    z-index: -1;
-    @include backface-visibility(hidden);
-
-    @if $flip {
-      @include skew(0, $angle * -1);
-      transform-origin: 0 0;
-    } @else {
-      @include skew(0, $angle);
-      transform-origin: center center;
-    }
-  }
-}
-
-
-
-
-@mixin angled_background_1($pseudo, $flip: false, $angle: 2deg) {
-  // Possible values for $pseudo are: before, after, both
-  @if $pseudo == 'before' or $pseudo == 'after' or $pseudo == 'both' {
+@mixin angled_background($pseudo, $angle: 5deg) {
+  // Possible values for $pseudo are: before, after
+  @if $pseudo == 'before' or $pseudo == 'after' {
     position: relative;
     z-index: 1;
-    $selector: if($pseudo == 'both', '&:before,&:after', '&:#{$pseudo}');
+
+    $selector: '&:#{$pseudo}';
 
     #{$selector} {
-      background: inherit;
+      background-color: inherit;
       content: '';
       display: block;
       height: 50%;
@@ -48,62 +15,23 @@
       position: absolute;
       right: 0;
       z-index: -1;
-      -webkit-backface-visibility: hidden; // for Chrome Windows
+      @include backface-visibility(hidden);
     }
 
     @if $pseudo == 'before' {
       #{$selector} {
         top: 0;
-
-        @if $flip {
-          transform: skewY($angle * -1);
-          transform-origin: 0 0;
-        } @else {
-          transform: skewY($angle);
-          transform-origin: 100% 0;
-        }
+        @include skew(0, $angle);
+        transform-origin: right top;
       }
     }
 
     @if $pseudo == 'after' {
       #{$selector} {
         bottom: 0;
-
-        @if $flip {
-          transform: skewY($angle);
-          transform-origin: 0 100%;
-        } @else {
-          transform: skewY($angle * -1);
-          transform-origin: 100%;
-        }
-      }
-    }
-
-    @if $pseudo == 'both' {
-      &:before {
-        top: 0;
-
-        @if $flip {
-          transform: skewY($angle * -1);
-          transform-origin: 0 0;
-        } @else {
-          transform: skewY($angle);
-          transform-origin: 100% 0;
-        }
-      }
-
-      &:after {
-        bottom: 0;
-
-        @if $flip {
-          transform: skewY($angle);
-          transform-origin: 0 0;
-        } @else {
-          transform: skewY($angle * -1);
-          transform-origin: 100%;
-        }
+        @include skew(0, ($angle * -1));
+        transform-origin: 100%;
       }
     }
   }
 }
-
