Use the systems modernizr

--- a/docroot/themes/custom/site/src/scss/custom/components/_footer.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_footer.scss
@@ -196,6 +196,7 @@ $md-footer-bottom-padding-top-bottom: 55px;
   // Footer
   .footer {
     padding-top: $md-footer-padding-top;
+    margin-top: 300px;
   }
 
   .footer-top-outer {
