--- a/docroot/themes/custom/site/src/scss/mixins/_angled-background.scss
+++ b/docroot/themes/custom/site/src/scss/mixins/_angled-background.scss
@@ -7,13 +7,13 @@
     $selector: '&:#{$pseudo}';
 
     #{$selector} {
+      display: block;
+      position: absolute;
+      left: 0;
+      right: 0;
       background-color: inherit;
       content: '';
-      display: block;
       height: 50%;
-      left: 0;
-      position: absolute;
-      right: 0;
       z-index: -1;
       @include backface-visibility(hidden);
     }
@@ -27,10 +27,13 @@
     }
 
     @if $pseudo == 'after' {
+
       #{$selector} {
-        bottom: 0;
-        @include skew(0, ($angle * -1));
-        transform-origin: 100%;
+        top: 100%;
+        @include skew(0, $angle);
+        transform-origin: bottom right;
+        height: 130px;
+        z-index: 2;
       }
     }
   }
