--- a/docroot/themes/custom/site/src/scss/custom/components/_banner.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_banner.scss
@@ -34,6 +34,10 @@
     margin-left: auto;
     margin-right: auto;
   }
+
+  img {
+    min-width: 100%;
+  }
 }
 
 // --------------------------------------------------
