--- a/docroot/themes/custom/site/src/scss/custom/entities/paragraph/type/_1-column-action-centered.scss
+++ b/docroot/themes/custom/site/src/scss/custom/entities/paragraph/type/_1-column-action-centered.scss
@@ -10,6 +10,11 @@
 // Variables
 // --------------------------------------------------
 
+$xs-paragraph-action-heading-margin-bottom: 30px;
+$sm-paragraph-action-heading-margin-bottom: 50px;
+$md-paragraph-action-heading-margin-bottom: 90px;
+$lg-paragraph-action-heading-margin-bottom: 100px;
+
 // --------------------------------------------------
 // Styling
 // --------------------------------------------------
@@ -20,7 +25,6 @@
 
   .field--name-field-heading {
     text-align: left;
-    margin-bottom: 100px;
   }
 
   .field--name-field-description {
@@ -43,7 +47,12 @@
 @include media-breakpoint-up(xs) {
 
   // 1 column action - centered
-  .paragraph--type--_-column-action-centered {}
+  .paragraph--type--_-column-action-centered {
+
+    .field--name-field-heading {
+      margin-bottom: $xs-paragraph-action-heading-margin-bottom;
+    }
+  }
 }
 
 // Mobile - only
@@ -57,7 +66,12 @@
 @include media-breakpoint-up(sm) {
 
   // 1 column action - centered
-  .paragraph--type--_-column-action-centered {}
+  .paragraph--type--_-column-action-centered {
+
+    .field--name-field-heading {
+      margin-bottom: $sm-paragraph-action-heading-margin-bottom;
+    }
+  }
 }
 
 // Tablet - only
@@ -71,7 +85,12 @@
 @include media-breakpoint-up(md) {
 
   // 1 column action - centered
-  .paragraph--type--_-column-action-centered {}
+  .paragraph--type--_-column-action-centered {
+
+    .field--name-field-heading {
+      margin-bottom: $md-paragraph-action-heading-margin-bottom;
+    }
+  }
 }
 
 // Desktop - only
@@ -85,7 +104,12 @@
 @include media-breakpoint-up(lg) {
 
   // 1 column action - centered
-  .paragraph--type--_-column-action-centered {}
+  .paragraph--type--_-column-action-centered {
+
+    .field--name-field-heading {
+      margin-bottom: $lg-paragraph-action-heading-margin-bottom;
+    }
+  }
 }
 
 // Print
