--- a/docroot/themes/custom/site/src/scss/custom/components/_angled-background.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_angled-background.scss
@@ -15,6 +15,19 @@ $angled-background-angle: 5deg;
 $angled-background-padding-top: 10px;
 $angled-background-padding-bottom: 140px;
 
+// Responsive
+$xs-angled-background-padding-top: 10px;
+$xs-angled-background-padding-bottom: 50px;
+
+$sm-angled-background-padding-top: 10px;
+$sm-angled-background-padding-bottom: 70px;
+
+$md-angled-background-padding-top: 10px;
+$md-angled-background-padding-bottom: 140px;
+
+$lg-angled-background-padding-top: 10px;
+$lg-angled-background-padding-bottom: 140px;
+
 // Variants
 $angled-background-color-white: #fff;
 $angled-background-color-gray: #f4f5f5;
@@ -24,13 +37,6 @@ $angled-background-color-secondary: $brand-secondary;
 // --------------------------------------------------
 // Styling
 // --------------------------------------------------
-
-// Angled background
-.angled-background-color,
-.angled-background-image {
-  padding-top: $angled-background-padding-top;
-  padding-bottom: $angled-background-padding-bottom;
-}
 
 // Color
 .angled-background-color {
@@ -48,8 +54,6 @@ $angled-background-color-secondary: $brand-secondary;
       bottom: 0;
       left: 0;
       right: 0;
-      margin-top: -$angled-background-padding-top;
-      margin-bottom: -$angled-background-padding-bottom;
       min-height: 100%;
       background-color: #fff;
       z-index: -1;
@@ -73,8 +77,6 @@ $angled-background-color-secondary: $brand-secondary;
     bottom: 0;
     left: 0;
     right: 0;
-    margin-top: -$angled-background-padding-top;
-    margin-bottom: -$angled-background-padding-bottom;
     min-height: 100%;
     content: '';
     z-index: -1;
@@ -146,7 +148,32 @@ $angled-background-color-secondary: $brand-secondary;
 @include media-breakpoint-up(xs) {
 
   // Angled background
-  .angled-background-color {}
+  .angled-background-color,
+  .angled-background-image {
+    padding-top: $xs-angled-background-padding-top;
+    padding-bottom: $xs-angled-background-padding-bottom;
+  }
+
+  // Color
+  .angled-background-color {
+
+    .angled-background-inner {
+
+      &:before {
+        margin-top: -$xs-angled-background-padding-top;
+        margin-bottom: -$xs-angled-background-padding-bottom;
+      }
+    }
+  }
+
+  // Image
+  .angled-background-image {
+
+    .angled-background-image-wrapper {
+      margin-top: -$xs-angled-background-padding-top;
+      margin-bottom: -$xs-angled-background-padding-bottom;
+    }
+  }
 }
 
 // Mobile - only
@@ -160,7 +187,32 @@ $angled-background-color-secondary: $brand-secondary;
 @include media-breakpoint-up(sm) {
 
   // Angled background
-  .angled-background-color {}
+  .angled-background-color,
+  .angled-background-image {
+    padding-top: $sm-angled-background-padding-top;
+    padding-bottom: $sm-angled-background-padding-bottom;
+  }
+
+  // Color
+  .angled-background-color {
+
+    .angled-background-inner {
+
+      &:before {
+        margin-top: -$sm-angled-background-padding-top;
+        margin-bottom: -$sm-angled-background-padding-bottom;
+      }
+    }
+  }
+
+  // Image
+  .angled-background-image {
+
+    .angled-background-image-wrapper {
+      margin-top: -$sm-angled-background-padding-top;
+      margin-bottom: -$sm-angled-background-padding-bottom;
+    }
+  }
 }
 
 // Tablet - only
@@ -174,7 +226,32 @@ $angled-background-color-secondary: $brand-secondary;
 @include media-breakpoint-up(md) {
 
   // Angled background
-  .angled-background-color {}
+  .angled-background-color,
+  .angled-background-image {
+    padding-top: $md-angled-background-padding-top;
+    padding-bottom: $md-angled-background-padding-bottom;
+  }
+
+  // Color
+  .angled-background-color {
+
+    .angled-background-inner {
+
+      &:before {
+        margin-top: -$md-angled-background-padding-top;
+        margin-bottom: -$md-angled-background-padding-bottom;
+      }
+    }
+  }
+
+  // Image
+  .angled-background-image {
+
+    .angled-background-image-wrapper {
+      margin-top: -$md-angled-background-padding-top;
+      margin-bottom: -$md-angled-background-padding-bottom;
+    }
+  }
 }
 
 // Desktop - only
@@ -188,7 +265,32 @@ $angled-background-color-secondary: $brand-secondary;
 @include media-breakpoint-up(lg) {
 
   // Angled background
-  .angled-background-color {}
+  .angled-background-color,
+  .angled-background-image {
+    padding-top: $lg-angled-background-padding-top;
+    padding-bottom: $lg-angled-background-padding-bottom;
+  }
+
+  // Color
+  .angled-background-color {
+
+    .angled-background-inner {
+
+      &:before {
+        margin-top: -$lg-angled-background-padding-top;
+        margin-bottom: -$lg-angled-background-padding-bottom;
+      }
+    }
+  }
+
+  // Image
+  .angled-background-image {
+
+    .angled-background-image-wrapper {
+      margin-top: -$lg-angled-background-padding-top;
+      margin-bottom: -$lg-angled-background-padding-bottom;
+    }
+  }
 }
 
 // Print
